--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "type": "module",
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.2",
